--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,11 @@
+# Installation
+# Ctrl + A, I
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'block/cyan'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 #  remap prefix to Control + a
@@ -13,3 +18,8 @@ unbind C-b
 # Always at the bottom
 #
 run '~/.tmux/plugins/tpm/tpm'
+
+setw -g monitor-activity on
+set -g visual-activity on
+
+setw -g mode-keys vi
