Update config for tmux and zshrc
TMUX changes:
1. Add emojis in toolbar below
2. Add Dracula Theme in plugins

ZSHRC
1. Add autocomplete
2. Add installation in README

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,14 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'block/cyan'
+set -g @themepack 'basic'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @themepack 'powerline/double/magenta'
+#set -g @plugin 'block/cyan'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 #  remap prefix to Control + a
 set -g prefix C-a
@@ -23,3 +27,13 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 setw -g mode-keys vi
+
+set -g status-left "#[fg=colour240,bg=colour235] 🐋🍜 #[fg=colour240,bg=colour235,nobold]#[fg=colour240,bg=colour235] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+set-window-option -g window-status-current-format ' #[fg=white]** #[fg=white,bold][#{window_index}] #[fg=green]#{pane_current_command} #[fg=cyan]#(pwd="#{pane_current_path}"; echo ${pwd####*/}) #[fg=white]**'
+set-window-option -g window-status-format '#[fg=colour244,bold][#{window_index}] #[fg=colour244]#{pane_current_command} #[fg=colour244]#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
+
