refactor(nvim): remove nvim.init.vim and introduce neoconf.json for configuration
The nvim.init.vim file is deleted to transition to a more modern and structured configuration approach using JSON. The new .neoconf.json file provides a cleaner and more maintainable way to manage Neovim settings, especially for plugin configurations. This change also includes a .gitignore file to exclude unnecessary files from version control, improving project organization and reducing clutter.

docs(nvim): add LICENSE and README.md files for project documentation

Introduce an Apache License 2.0 to clarify the terms under which the
project can be used, modified, and distributed. The README.md provides
a brief introduction to the LazyVim starter template, including links
to the LazyVim repository and documentation for installation guidance.
These additions enhance the project's transparency and accessibility
for contributors and users.

feat(nvim): bootstrap LazyVim and configure plugins

Introduce a new Neovim configuration setup by bootstrapping LazyVim
and adding a set of plugins for enhanced functionality. The setup
includes language support for Docker, Git, Go, Markdown, Python,
Terraform, TypeScript, and YAML, as well as testing and debugging
capabilities.

The changes aim to provide a comprehensive and modular Neovim
environment that can be easily extended and customized. The removal
of the Copilot plugin reflects a decision to streamline the plugin
list and focus on essential tools. The addition of `vim.o.scrolloff`
enhances the user experience by keeping the cursor centered.

feat(plugins): add example plugin configuration and stylua formatting

Introduce a new example plugin configuration file to demonstrate
how to add, configure, and disable plugins in LazyVim. This includes
adding the gruvbox colorscheme, configuring LazyVim to use it, and
modifying settings for various plugins like trouble.nvim, nvim-cmp,
telescope.nvim, and nvim-lspconfig. Additionally, add support for


--- a/tmux.conf
+++ b/tmux.conf
@@ -2,13 +2,36 @@ set -g @catppuccin_flavour 'mocha'
 # List of plugins
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 set-option -g mouse on
 set -g status-right '#{battery_status_bg} Batt:🔋 #{battery_icon} #{battery_percentage} | %a %h-%d %H:%M 🐳'
+
+set -g status-position top
+
+
+#  remap prefix to Control + a
+set -g prefix C-a
+# bind 'C-a C-a' to type C-a'
+bind C-a send-prefix
+unbind C-b
+
+# List of plugins
+#
+set -g @plugin 'catppuccin/tmux#v2.1.2' 
+# set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin '2kabhishek/tmux-tilit'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @plugin 'tmux-plugins/tpm'
+
+
+set-option -g mouse on
+
 
 set -g status-position top
 
@@ -27,26 +50,61 @@ setw -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -g @tilish-prefix 'M-space'
 
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
-#
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g status-left ""
 
 setw -g mode-keys vi
+
+
+
+# Config is from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
+
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_status_background "none"
+set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
+
+# status left look and feel
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left "#{?client_prefix,#{#[bg=#{@thm_red},fg=#{@thm_bg},bold]  #S },#{#[bg=#{@thm_bg},fg=#{@thm_green}]  #S }}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]│"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_blue}]  #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}} "
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_overlay_0},none]#{?window_zoomed_flag,│,}"
+set -ga status-left "#[bg=#{@thm_bg},fg=#{@thm_yellow}]#{?window_zoomed_flag,  zoom ,}"
+
+# status right look and feel
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+
+# Configure Tmux
+set -g status-position top
+set -g status-style "bg=#{@thm_bg}"
+set -g status-justify "absolute-centre"
+
+# pane border look and feel
+setw -g pane-border-status top
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=#{@thm_bg},fg=#{@thm_overlay_0}"
+setw -g pane-border-style "bg=#{@thm_bg},fg=#{@thm_surface_0}"
+setw -g pane-border-lines single
+
+# window look and feel
+set -wg automatic-rename on
+set -g automatic-rename-format "Window"
+
+set -g window-status-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-style "bg=#{@thm_bg},fg=#{@thm_rosewater}"
+set -g window-status-last-style "bg=#{@thm_bg},fg=#{@thm_peach}"
+set -g window-status-activity-style "bg=#{@thm_red},fg=#{@thm_bg}"
+set -g window-status-bell-style "bg=#{@thm_red},fg=#{@thm_bg},bold"
+set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
+
+set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
+set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
