ref(aerospace): make monitor slot fixed

--- a/aerospace.toml
+++ b/aerospace.toml
@@ -223,3 +223,14 @@ run = 'layout floating'
 if.app-name-regex-substring = 'obsidian'
 run = 'layout floating'
 
+[workspace-to-monitor-force-assignment]
+1 = 'main'
+2 = 'main'
+3 = 'main'
+4 = 'main'
+5 = 'main'
+6 = ['secondary', 'main']
+7 = ['secondary', 'main']
+8 = ['secondary', 'main']
+9 = ['secondary', 'main']
+0 = ['secondary', 'main']
