feat: show arrow for active pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,65 +1,42 @@
-set -g @catppuccin_flavour 'mocha'
-# List of plugins
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
+# ==========================
+# General Options
+# ==========================
 set-option -g mouse on
-set -g status-right '#{battery_status_bg} Batt:🔋 #{battery_icon} #{battery_percentage} | %a %h-%d %H:%M 🐳'
-
-set -g status-position top
-
-
-#  remap prefix to Control + a
-set -g prefix C-a
-# bind 'C-a C-a' to type C-a'
-bind C-a send-prefix
-unbind C-b
-
-# List of plugins
-#
-set -g @plugin 'catppuccin/tmux#v2.1.2' 
-# set -g @plugin 'catppuccin/tmux#v2.1.2'
-set -g @plugin '2kabhishek/tmux-tilit'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-set -g @plugin 'tmux-plugins/tpm'
-
-
-set-option -g mouse on
-
-
-set -g status-position top
-
-
-#  remap prefix to Control + a
-set -g prefix C-a
-# bind 'C-a C-a' to type C-a'
-bind C-a send-prefix
-unbind C-b
-
-# Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
-
-setw -g pane-base-index 1
-set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
-set -g @tilish-prefix 'M-space'
-
-set -g status-left ""
-
 setw -g mode-keys vi
 
+set -g default-terminal "${TERM}"
+# set-option -g default-command "reattach-to-user-namespace -l zsh" # For macOS
 
+# ==========================
+# Keybindings
+# ==========================
+# Remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
 
+# ==========================
+# Plugins
+# ==========================
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin '2kabhishek/tmux-tilit'
+
+# ==========================
+# Plugin Configurations
+# ==========================
+set -g @tilish-prefix 'M-space'
+
+# ==========================
+# Theme - Catppuccin
 # Config is from https://github.com/catppuccin/tmux/discussions/317#discussioncomment-11064512
-
+# ==========================
 set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_status_background "none"
 set -g @catppuccin_window_status_style "none"
@@ -105,6 +82,21 @@ set -gF window-status-separator "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}]│"
 
 set -g window-status-current-format " #I#{?#{!=:#{window_name},Window},: #W,} "
 set -g window-status-current-style "bg=#{@thm_peach},fg=#{@thm_bg},bold"
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
+set -g pane-border-lines double
+
+# Indicate active pane by colouring only half of the border in windows with 
+# exactly two panes, by displaying arrow markers, by drawing both or neither.
+# [off | colour | arrows | both]
+set -g pane-border-indicators both
+
+# Enables tracking of focus events, allows tmux to respond when the terminal
+# window gains or looses focus
+set-option -g focus-events on
+
+
+
+# ==========================
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# ==========================
+run '~/.tmux/plugins/tpm/tpm'
